--- a/Wizard21.ipynb
+++ b/Wizard21.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "20f2c283-1a82-46af-8792-c7ed949f1ba4",
    "metadata": {},
    "outputs": [
@@ -38,8 +38,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Column': 'col1', 'Number of Cards': 2, 'Cards Add Up To': 8, 'Column Has Ace': False}\n",
-      "[<__main__.Column object at 0x000001EE87629E20>, <__main__.Column object at 0x000001EE8752D9D0>, <__main__.Column object at 0x000001EE8752F980>, <__main__.Column object at 0x000001EE8752F5C0>]\n"
+      "{'Column': 'col1', 'Number of Cards': 0, 'Cards Add Up To': 0, 'Column Has Ace': False}\n",
+      "{'Column': 'col2', 'Number of Cards': 0, 'Cards Add Up To': 0, 'Column Has Ace': False}\n",
+      "{'Column': 'col3', 'Number of Cards': 0, 'Cards Add Up To': 0, 'Column Has Ace': False}\n",
+      "{'Column': 'col4', 'Number of Cards': 0, 'Cards Add Up To': 0, 'Column Has Ace': False}\n",
+      "\n",
+      "Adding Card Value 10\n",
+      "{'Column': 'col1', 'Number of Cards': 1, 'Cards Add Up To': 10, 'Column Has Ace': False}\n",
+      "{'Column': 'col2', 'Number of Cards': 0, 'Cards Add Up To': 0, 'Column Has Ace': False}\n",
+      "{'Column': 'col3', 'Number of Cards': 0, 'Cards Add Up To': 0, 'Column Has Ace': False}\n",
+      "{'Column': 'col4', 'Number of Cards': 0, 'Cards Add Up To': 0, 'Column Has Ace': False}\n"
      ]
     }
    ],
@@ -84,18 +92,20 @@
     "        col2 = Column('col2')\n",
     "        col3 = Column('col3')\n",
     "        col4 = Column('col4')\n",
-    "        self.columns.append([col1, col2, col3, col4])\n",
+    "        self.columns = [col1, col2, col3, col4]\n",
     "\n",
     "    def printBoard(self):\n",
     "        for col in self.columns:\n",
-    "            print(col)\n",
+    "            print({'Column':col.name, 'Number of Cards':col.numCards, 'Cards Add Up To':col.total, 'Column Has Ace':col.hasAce})\n",
     "\n",
-    "col1 = Column('col1')\n",
-    "col1.addCard(1, True)\n",
-    "col1.addCard(7)\n",
-    "print(col1.getCol())\n",
+    "\n",
     "board = Board()\n",
     "board.setupBoard()\n",
+    "board.printBoard()\n",
+    "\n",
+    "print()\n",
+    "print('Adding Card Value 10')\n",
+    "board.columns[0].addCard(10)\n",
     "board.printBoard()"
    ]
   }
@@ -116,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
